# Finance_Project

./: README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
extrato/: models.py  urls.py  views.py
extrato/migrations/: 0001_initial.py
perfil/: admin.py  models.py  urls.py  utils.py  views.py
perfil/migrations/: 0001_initial.py  0002_conta.py  0003_alter_categoria_valor_planejamento.py
perfil/templates/: gerenciar.html  home.html
